web-infras/parser/tests/fixtures/self-added/await-in-async-context/await-as-arrow-param-lhs-pat/parent-not-current-async/output.txt
[SyntaxError]: Can not use 'await' as identifier inside an async function. (2,13)
2|    async ({await}) => {
 |           ^
